--- a/src/styles/components/InnerBanner.module.scss
+++ b/src/styles/components/InnerBanner.module.scss
@@ -8,10 +8,10 @@
 		justify-items: center;
 		img {
 			height: 100% !important;
-			// width: 100% !important;
-			width:100% !important;
+
+			width: 99% !important;
 			object-fit: cover;
-			border-radius: 30px 
+			border-radius: 30px;
 		}
 	}
 
