--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -4,7 +4,7 @@
 	min-height: 100vh;
 
 	// @extend %f_c_j_center;
-	color: var(--color_primary);
+	color: var(--color_black);
 	background-color: var(--color_primary_contrast);
 	// padding: 140px;
 }
