--- a/src/styles/sections/SuccessStorySection.module.scss
+++ b/src/styles/sections/SuccessStorySection.module.scss
@@ -1,6 +1,7 @@
 @import "../helpers/helpers.scss";
 			
 .SuccessStorySection{
+    overflow: hidden;
     background-color: var(--color_black);
     
 }
