--- a/src/styles/components/GlobalSpanning.module.scss
+++ b/src/styles/components/GlobalSpanning.module.scss
@@ -1,18 +1,26 @@
 @import "../helpers/helpers.scss";
 
 .GlobalSpanning {
-	h1 {
-		text-align: center;
-	}
+	position: relative;
 
 	div:nth-child(2) {
-		// position:absolute;
-		// z-index: -1;
+		@extend %d_flex;
+		justify-content: center;
 	}
 	div:nth-child(3) {
 		display: flex;
+		gap: 10px;
 	}
 }
 .justifycenter {
-	justify-content: center;
+	bottom: 0;
+	right: 0;
+	transform: translate(-10%, -150%);
+	position: absolute;
+}
+.lineOneh1 {
+	font-size: 80px;
+	text-align: center;
+	// position: absolute;
+	top: 0;
 }
