--- a/src/styles/components/RowOne.module.scss
+++ b/src/styles/components/RowOne.module.scss
@@ -2,12 +2,30 @@
 
 .RowOne {
 	padding: 5%;
-	
-
 	@extend %f_r_a_center;
+	justify-content: space-around;
+	p {
+		font-weight: 100;
+	}
+}
+.imageDiv {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	height: 40vh;
+	gap: 40px;
+	justify-content: center;
+	div:nth-child(1) {
+		width: 200px;
+		align-self: center;
+	}
 	div:nth-child(2) {
-		@extend %f_r_a_center;
-		img:nth-child(2) {
-		}
+		position: absolute;
+		width: 200px;
+		align-self: flex-start;
+	}
+	div:nth-child(3) {
+		width: 200px;
+		align-self: flex-end;
 	}
 }
