--- a/src/styles/components/RowTwoContent.module.scss
+++ b/src/styles/components/RowTwoContent.module.scss
@@ -1,12 +1,23 @@
 @import "../helpers/helpers.scss";
 
 .RowTwo {
+	width: 70%;
 	@extend %relative_box;
 	@extend %f_r_a_center;
+	padding: 40px;
+	justify-content: center;
 	p {
-		width: 30%;
 	}
 	img {
-		padding: 10% !important;
+		padding: 20px !important;
 	}
+	h1 {
+		text-align: left;
+		font-size: var(--font-size-xl);
+	}
+}
+.RowTwoContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
