--- a/src/styles/components/ValueFirstRow.module.scss
+++ b/src/styles/components/ValueFirstRow.module.scss
@@ -1,19 +1,22 @@
 @import "../helpers/helpers.scss";
-.ValueImg {
-	border: 1px solid black;
-}
+
 .container {
-	height: 400px;
-	position: relative;
+	padding: 100px;
+	display: flex;
+	width: 100%;
+	height: 600px;
+
+	align-items: center;
 }
 .OverlapImg {
 	position: absolute !important;
 	bottom: 0;
+	right: 0;
 
-	right: 15% !important;
-	width: 204px;
-	transform: translate(10px, 40%);
-	height: 277px;
+	transform: translate(-50%, 50%);
+}
+.ImageWrapper {
+	position: relative;
 }
 .ValueText {
 	height: 50%;
