--- a/src/styles/components/ValueSecondRow.module.scss
+++ b/src/styles/components/ValueSecondRow.module.scss
@@ -1,27 +1,25 @@
 @import "../helpers/helpers.scss";
-.ValueRowTwoContainer {
-	div:nth-child(1) {
-		@extend %d_flex;
-		justify-content: space-between;
-	}
-	div:nth-child(2) {
-		@extend %d_flex;
-		justify-content: space-between;
 
-		Image:nth-child(2) {
-			border: 1px solid black;
-		}
+.ValueRowTwoContainer {
+	.LineOne {
+		display: flex;
+		justify-content: space-between;
+		padding: 0px 10px 0 30px;
 	}
 }
 .ValueImg {
-	border: 1px solid black;
+	width: 100%;
 
+	justify-content: space-around;
+	display: flex;
+	border: 1px solid;
 	div {
-		padding: 70px;
-		display: flex;
-		/* margin: 10px; */
-		// border-right: 1px solid black;
-		align-items: center;
 		justify-content: center;
+		align-items: center;
+		padding: 100px;
+		display: flex;
+		width: 100%;
+
+		border: 1px solid black;
 	}
 }
