--- a/src/styles/components/ValueSecondRow.module.scss
+++ b/src/styles/components/ValueSecondRow.module.scss
@@ -4,7 +4,21 @@
 	.LineOne {
 		display: flex;
 		justify-content: space-between;
-		padding: 0px 10px 0 30px;
+		padding: 10px 10px 20px 30px;
+		div {
+			display: flex;
+			gap: 10px;
+		}
+	}
+
+	div:nth-child(1) {
+		button {
+			width: 30px;
+			height: 30px;
+			border-radius: 50%;
+			background-color: transparent;
+			border: 1px solid black;
+		}
 	}
 }
 .ValueImg {
