--- a/src/styles/components/AnimationSlider.module.scss
+++ b/src/styles/components/AnimationSlider.module.scss
@@ -1,6 +1,9 @@
 @import "../helpers/helpers.scss";
 .AnimatedSlider {
+	width: 100%;
 	overflow: hidden;
+	white-space: nowrap;
+	box-sizing: border-box;
 	div {
 		@extend %f_r_aj_center;
 
@@ -10,5 +13,30 @@
 }
 .Slide_div1 {
 	gap: 10px;
-	display: flex;
+	display: inline-block;
+
+	animation: LinearEffect 10s linear infinite;
+}
+.Slide_div2 {
+	gap: 10px;
+	display: inline-block;
+
+	animation: LinearEffectRight 10s linear infinite;
+}
+
+@keyframes LinearEffect {
+	from {
+		transform: translateX(0);
+	}
+	to {
+		transform: translateX(-100%);
+	}
+}
+@keyframes LinearEffectRight {
+	from {
+		transform: translateX(0);
+	}
+	to {
+		transform: translateX(100%);
+	}
 }
