--- a/src/styles/globals/variables.scss
+++ b/src/styles/globals/variables.scss
@@ -12,7 +12,7 @@ $browser-prefixes: false !default;
 	--color_primary_light: #e9cf72;
 
 	--color_primary_shade: #deb72b;
-	--color_primary_dark: #0F0F0F;
+	--color_primary_dark: #0f0f0f;
 	--color_primary_deep: #9f8219;
 	--color_primary_contrast: #000000;
 	// Secondary colors
@@ -27,10 +27,13 @@ $browser-prefixes: false !default;
 	--color_black: #000000;
 	--color_white: #ffffff;
 	--color_border: rgba(255, 255, 255, 0.1);
---font-sizePara:20px;
---font-size-xxl:120px
---font-size-xl:100px
---font-size-m:60px
+	--font-size-sm: 20px;
+	--font-size-m: 40px;
+	--font-size-xxl: 120px !important;
+	--font-size-xl: 100px !important;
+	--font-size-l: 60px !important;
+	--font-size-xs: 16px !important;
+
 	// Extras
 	--container_width: 100%;
 	--container_left_space: calc((100% - var(--container_width)) / 2);
@@ -49,6 +52,6 @@ $browser-prefixes: false !default;
 	}
 
 	@media (min-width: 1401px) {
-	  --container_width: 1860px;
+		--container_width: 1860px;
 	}
 }
