--- a/src/styles/components/InnerBanner.module.scss
+++ b/src/styles/components/InnerBanner.module.scss
@@ -1,38 +1,43 @@
-@import "../helpers/helpers.scss";
-
 .inner_banner_wrap {
-	@extend %relative_box;
+	// @extend %relative_box;
 	height: 100vh;
 	padding: 20px;
 	margin: 10px 0px 100px 0px;
 	display: flex;
 	justify-content: center;
 	overflow: hidden;
-	width: 99%;
+	width: 100%;
 	height: auto;
-	// >>
+
+	.banner_image_wrapper {
+		width: 70%;
+		height: 70%;
+		overflow: hidden; // Ensures that anything outside 1000px x 1000px is hidden
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 
 	.banner_image {
 		display: grid;
-		width: 90%;
-		height: 50%;
+		width: 100%;
+		height: 100%;
 		justify-items: center;
-		img {
-			// height: 100% !important;
 
-			// width: 99% !important;
+		img {
 			object-fit: cover;
 			border-radius: 30px;
+			width: 100%;
+			height: 100%;
+			transition: transform 0.5s ease;
 		}
 	}
 
 	.banner_content {
-		@extend %full_overlay;
+		// @extend %full_overlay;
 	}
 }
-.width100 {
-	overflow: hidden;
-}
+
 .zoom_element {
 	background-color: #4caf50;
 	color: white;
@@ -41,6 +46,9 @@
 	align-items: center;
 	font-size: 24px;
 	border-radius: 50%;
-	transition: transform 0.5s ease;
 	transform: scale(1);
+}
+
+.animation {
+	transform: scale(1.5);
 }
