--- a/src/styles/components/Header.module.scss
+++ b/src/styles/components/Header.module.scss
@@ -32,7 +32,7 @@
 			// The menu is transformed as per sidebar on click of hamburger icon
 			@include sm-down {
 				padding-top: 5%;
-				background-color: var(--color_white);
+				background-color: var(--color_black);
 				transition: ease all 300ms;
 				// transform: translateX(-100%);
 				// flex-direction: column;
