--- a/src/styles/components/QuotesBoxSlider.module.scss
+++ b/src/styles/components/QuotesBoxSlider.module.scss
@@ -1,4 +1,15 @@
 @import "../helpers/helpers.scss";
+.QuoteBox {
+	// margin: 10px;
+	div {
+		border-radius: 30px;
+		background-color: var(--color_primary_dark);
+
+		margin: 0 auto;
+
+		border: 1px solid var(--color_border);
+	}
+}
 .QuotesSliderContainer {
 	width: 100%;
 	display: flex;
@@ -26,4 +37,12 @@
 	margin: 10px;
 	display: flex;
 	gap: 3px;
+}
+.QuotesSliderContainer {
+}
+
+.slider {
+	img {
+		z-index: 4;
+	}
 }
