--- a/src/styles/components/ValueSecondRow.module.scss
+++ b/src/styles/components/ValueSecondRow.module.scss
@@ -17,7 +17,11 @@
 			height: 30px;
 			border-radius: 50%;
 			background-color: transparent;
-			border: 1px solid black;
+			border: 2px solid black;
+			
+		}
+		button:active {
+			background-color: var(--color_primary);
 		}
 	}
 }
