--- a/src/styles/sections/HomeHero.module.scss
+++ b/src/styles/sections/HomeHero.module.scss
@@ -1,6 +1,6 @@
 @import "../helpers/helpers.scss";
 .hero_wrap {
-	overflow: hidden;
+	// overflow: hidden;
 	color: var(--color_white);
 	background-color: var(--color_black);
 
