--- a/src/styles/sections/SuccessStorySection.module.scss
+++ b/src/styles/sections/SuccessStorySection.module.scss
@@ -2,6 +2,6 @@
 
 .SuccessStorySection {
 	color: var(--color_white);
-	overflow: hidden;
+	// overflow: hidden;
 	background-color: var(--color_black);
 }
