--- a/src/styles/sections/ValueSection.module.scss
+++ b/src/styles/sections/ValueSection.module.scss
@@ -1,7 +1,6 @@
 @import "../helpers/helpers.scss";
 
 .ValueSection {
-	overflow: hidden;
+	// overflow: hidden;
 	background-color: var(--color_white);
 }
-
