--- a/src/styles/components/QuotesBoxSlider.module.scss
+++ b/src/styles/components/QuotesBoxSlider.module.scss
@@ -10,39 +10,96 @@
 		border: 1px solid var(--color_border);
 	}
 }
-.QuotesSliderContainer {
+.slick-dots {
+	position: absolute;
+	bottom: -45px;
+	list-style: none;
+	display: block;
+	text-align: center;
+	padding: 0;
 	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding: 150px;
-	overflow: hidden;
-	div {
-		gap: 20px;
-	}
-	div:nth-child(2) {
-		display: flex;
-	}
+}
+.slick-dots li {
+	position: relative;
+	display: inline-block;
+	height: 20px;
+	width: 20px;
+	margin: 0 5px;
+	padding: 0;
+	cursor: pointer;
+}
+.slick-dots li button {
+	border: 0;
+	background: white;
+	display: block;
+	height: 20px;
+	width: 100px;
+	outline: none;
+	line-height: 0;
+	font-size: 0;
+	color: transparent;
+	padding: 5px;
+	cursor: pointer;
+}
+.slick-dots li button:hover,
+.slick-dots li button:focus {
+	outline: none;
+}
+.slick-track {
+	height: 100px !important;
+}
+.slick-dots li button:hover:before,
+.slick-dots li button:focus:before {
+	opacity: 1;
+}
+.slick-dots li button:before {
+	position: absolute;
+	top: 0;
+	left: 0;
+	content: "-";
+	width: 20px;
+	height: 20px;
+	font-family: "slick";
+	font-size: 6px;
+	line-height: 5px;
+	text-align: center;
+	color: rgb(123, 255, 0);
+	opacity: 0.25;
+}
 
-	button {
-		height: 1px;
-		width: 30px;
-	}
-	button:active,
-	button:hover {
-		background-color: var(--color_primary);
-	}
-}
-.buttonDivQuotesBox {
-	margin: 10px;
-	display: flex;
-	gap: 3px;
-}
-.QuotesSliderContainer {
-}
+// .QuotesSliderContainer {
+// 	width: 100%;
+// 	display: flex;
+// 	flex-direction: column;
+// 	align-items: center;
+// 	padding: 150px;
+// 	overflow: hidden;
+// 	div {
+// 		gap: 20px;
+// 	}
+// 	div:nth-child(2) {
+// 		display: flex;
+// 	}
 
-.slider {
-	img {
-		z-index: 4;
-	}
-}
+// 	button {
+// 		height: 1px;
+// 		width: 30px;
+// 	}
+// 	button:active,
+// 	button:hover {
+// 		background-color: var(--color_primary);
+// 	}
+// }
+// .buttonDivQuotesBox {
+// 	margin: 10px;
+// 	display: flex;
+// 	gap: 3px;
+// }
+// .QuotesSliderContainer {
+// }
+
+// .slider {
+// 	img {
+// 		z-index: 4;
+// 	}
+// }
