--- a/src/styles/components/QuotesBoxSlider.module.scss
+++ b/src/styles/components/QuotesBoxSlider.module.scss
@@ -2,7 +2,7 @@
 .QuoteBox {
 	// margin: 10px;
 	// Carousel.module.scss
-
+	text-align: center;
 	.slick-slide {
 		padding: 10px;
 		background-color: #f5f5f5;
@@ -32,6 +32,12 @@
 	padding: 10px; /* Optional padding */
 }
 .Flex {
+	.slick-slider .slick-track,
+	.slick-slider .slick-list {
+		transform: translate3d(0, 0, 0);
+		display: flex;
+		gap: 10px;
+	}
 	border: 2px solid var(--color_border);
 	padding: 30px;
 	border-radius: 20px;
@@ -40,6 +46,7 @@
 	justify-content: space-around;
 	gap: 20px;
 	div {
+		text-align: left;
 		@extend %d_flex;
 		padding: 15px 0;
 		align-items: center;
@@ -47,10 +54,6 @@
 		.flexClm {
 			align-items: baseline;
 			@extend %f_d_column;
-			.Clogo {
-				width: 75px;
-				height: 40px;
-			}
 		}
 	}
 }
