--- a/src/styles/components/ContactUs.module.scss
+++ b/src/styles/components/ContactUs.module.scss
@@ -40,8 +40,13 @@
 			border-radius: 5px;
 			cursor: pointer;
 		}
+
 		button:active {
 			background-color: var(--color_white);
+			color: var(--color_black);
+		}
+		button:hover {
+			background-color: var(--color_primary);
 			color: var(--color_black);
 		}
 		input:focus {
