--- a/src/styles/components/ValueSecondRow.module.scss
+++ b/src/styles/components/ValueSecondRow.module.scss
@@ -4,7 +4,7 @@
 	.LineOne {
 		display: flex;
 		justify-content: space-between;
-		padding: 10px 10px 20px 30px;
+		// padding: 10px 10px 20px 30px;
 		div {
 			display: flex;
 			gap: 10px;
