--- a/src/styles/components/Header.module.scss
+++ b/src/styles/components/Header.module.scss
@@ -10,10 +10,15 @@
 	z-index: 20;
 	top: 0;
 
-	color: var(--color_primary);
+	color: var(--color_white);
 	box-shadow: 0 -6px 10px 5px (#f4be69 0.2);
 	background-color: var(--color_black);
 
+	div {
+		&:hover {
+			background-color: (#f4be69 0.1);
+		}
+	}
 	.header_inside {
 		@extend %f_r_aj_center;
 		justify-content: space-between;
@@ -21,6 +26,10 @@
 			padding: 10px 0;
 			max-width: 120px;
 			@extend %f_r_a_center;
+			&:hover {
+				scale: 1.1;
+				transition: ease all 300ms;
+			}
 		}
 		.links_wrap {
 			@extend %d_flex;
@@ -29,6 +38,7 @@
 			background-color: var(--color_secondary_deep);
 			align-self: stretch;
 			padding-inline-start: 0;
+
 			// The menu is transformed as per sidebar on click of hamburger icon
 			@include sm-down {
 				padding-top: 5%;
@@ -48,6 +58,15 @@
 				list-style-type: none;
 				cursor: pointer;
 				padding: 0 15px;
+				&:hover {
+					border-radius: 10px;
+					transition: var(--transition);
+					background-color: (var(--color_primary));
+					color: var(--color_white);
+					img {
+						filter: grayscale(100%);
+					}
+				}
 				@include sm-down {
 					padding: 15px;
 					flex-direction: column;
@@ -86,7 +105,13 @@
 						padding: 8px 15px;
 						transition: ease all 300ms;
 						&:hover {
-							background-color: (#f4be69 0.1);
+							border-radius: 10px;
+							transition: var(--transition);
+							background-color: (var(--color_primary));
+							color: var(--color_black);
+							img {
+								filter: grayscale(100%);
+							}
 						}
 					}
 				}
@@ -100,11 +125,12 @@
 					.arrow_img {
 						@extend %f_r_aj_center;
 						width: 12px;
+
 						transform: rotate(90deg);
 						transition: ease all 300ms;
 
 						img {
-							filter: brightness(0);
+							filter: brightness(100);
 						}
 					}
 				}
