--- a/src/styles/components/RowTwoContent.module.scss
+++ b/src/styles/components/RowTwoContent.module.scss
@@ -1,23 +1,17 @@
 @import "../helpers/helpers.scss";
-
-.RowTwo {
-	width: 70%;
-	@extend %relative_box;
-	@extend %f_r_a_center;
-	padding: 40px;
-	justify-content: center;
-	p {
-	}
-	img {
-		padding: 20px !important;
-	}
-	h1 {
-		text-align: left;
-		font-size: var(--font-size-xl);
-	}
-}
 .RowTwoContainer {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	// margin: 50px auto;
+	margin: 5% auto;
+	line-height: 1.3;
+}
+.RowTwo {
+	// width: 60%;
+	gap: 20px;
+	margin: 0 auto;
+
+	@extend %f_r_a_center;
+}
+.R2wrapper {
+	width: 60%;
+	margin: 0 auto;
 }
