--- a/src/styles/components/ValueFirstRow.module.scss
+++ b/src/styles/components/ValueFirstRow.module.scss
@@ -1,27 +1,22 @@
 @import "../helpers/helpers.scss";
 
 .container {
-	padding: 100px;
-	display: flex;
-	width: 100%;
-	height: 600px;
-
-	align-items: center;
+	@extend %f_r_aj_center;
 }
 .OverlapImg {
 	position: absolute !important;
 	bottom: 0;
-	right: 0;
+	right: 50%;
 
-	transform: translate(-50%, 50%);
+	transform: translate(50%, 50%);
 }
 .ImageWrapper {
 	position: relative;
 }
 .ValueText {
-	height: 50%;
+	// height: 50%;
 	@extend %d_flex;
 	justify-content: center;
 	align-items: center;
-	padding: 2%;
+	// padding: 2%;
 }
