--- a/src/styles/components/ContactUs.module.scss
+++ b/src/styles/components/ContactUs.module.scss
@@ -6,18 +6,19 @@
 	justify-content: space-evenly;
 	padding: 100px;
 	div:nth-child(1) {
-		width: 40%;
+		width: 50%;
 		display: grid;
-		justify-items: center;
-
+		// justify-items: center;
+		color: var(--color_black);
+		text-align: left;
 		p {
-			font: var(--font-sizePara);
+			font: var(--font-size-sm);
 		}
 	}
 
 	div:nth-child(2) {
 		@extend %d_flex;
-		width: 50%;
+		width: 40%;
 		gap: 30px;
 		flex-direction: column;
 		align-items: flex-start;
