--- a/src/styles/components/Footer.module.scss
+++ b/src/styles/components/Footer.module.scss
@@ -1,22 +1,20 @@
 @import "../helpers/helpers.scss";
 
 .main_footer {
+	padding: 1%;
 	// height: 100px;
-	@extend %f_r_aj_center;
+	display: flex;
 	justify-content: space-between;
 
 	p {
 		font-size: 16px;
 	}
 	div {
+		
 		@extend %d_flex;
 		justify-content: center;
 	}
-}
-.gap {
-	gap: 10px;
-	width: 30px;
-	height: 30px !important;
-	min-height: auto;
-	align-items: center;
+	div:nth-child(2) {
+		gap: 15px;
+	}
 }
