--- a/src/styles/components/ScrollEffect.module.scss
+++ b/src/styles/components/ScrollEffect.module.scss
@@ -1,17 +1,11 @@
 @import "../helpers/helpers.scss";
 
 .ScrollEffect {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	h1 {
-		font-size: 64px !important;
+	h3 {
 		font-weight: 500;
-		color: rgb(255, 255, 255);
+		opacity: .1;
 	}
-}
-.PrimaryColor {
-	color: var(--color_primary);
+	align-items: center;
 }
 
 // ???
