--- a/src/styles/components/ScrollEffectTitle.module.scss
+++ b/src/styles/components/ScrollEffectTitle.module.scss
@@ -14,7 +14,8 @@
 		// margin: 0 auto;
 		@extend %d_flex;
 		align-items: flex-start;
-		justify-content: space-between;
+		justify-content: space-around;
+		padding: 1%;
 	}
 	p {
 		// padding: 0 20px 0 20px;
