--- a/src/styles/components/RowTwoContent.module.scss
+++ b/src/styles/components/RowTwoContent.module.scss
@@ -3,6 +3,7 @@
 	// margin: 50px auto;
 	margin: 5% auto;
 	line-height: 1.3;
+
 	.break {
 		@include xl-down {
 			display: none;
@@ -12,11 +13,11 @@
 		// width: 60%;
 		gap: 20px;
 		margin: 0 auto;
-
+		font-weight: 100;
 		@extend %f_r_a_center;
 	}
 	.R2wrapper {
-		width: 60%;
+		width: 80%;
 		margin: 0 auto;
 	}
 }
