--- a/src/styles/components/ValueFirstRow.module.scss
+++ b/src/styles/components/ValueFirstRow.module.scss
@@ -2,17 +2,22 @@
 
 .container {
 	@extend %f_r_aj_center;
-	padding: 7% 1%;
+	padding: 7% 2%;
 }
 .OverlapImg {
 	position: absolute !important;
 	bottom: 0;
 	right: 50%;
+	max-width: 150px;
 
 	transform: translate(50%, 50%);
 }
+.ParentImg {
+	min-width: 700px;
+}
 .ImageWrapper {
 	position: relative;
+	width: 100%;
 }
 .ValueText {
 	// height: 50%;
