--- a/src/styles/sections/HomeHero.module.scss
+++ b/src/styles/sections/HomeHero.module.scss
@@ -3,7 +3,7 @@
 	// overflow: hidden;
 	color: var(--color_white);
 	background-color: var(--color_black);
-
+overflow: hidden;
 	h1 {
 		text-align: center;
 	}
