--- a/src/styles/components/RowOne.module.scss
+++ b/src/styles/components/RowOne.module.scss
@@ -19,30 +19,26 @@
 }
 .imageDiv {
 	position: relative;
-	@extend %d_flex;
-
 	width: 40%;
-	height: 300px;
+	height: 500px;
 	justify-content: center;
+
 	div:nth-child(1) {
 		position: absolute;
 		left: 0px;
 		bottom: 20px;
-		max-width: 200px;
-		min-width: 100px;
 	}
 	div:nth-child(2) {
 		position: absolute;
 		z-index: 10;
-		top: -30px;
-		max-width: 200px;
-		min-width: 100px;
+		top: 0;
+		right: 0;
+		transform: translate(-60%, 0%);
 	}
 	div:nth-child(3) {
 		position: absolute;
 		right: 0;
-		max-width: 200px;
-		min-width: 100px;
+
 		bottom: 0;
 	}
 }
