--- a/src/styles/globals/variables.scss
+++ b/src/styles/globals/variables.scss
@@ -46,14 +46,13 @@ $browser-prefixes: false !default;
 	@media (min-width: 992px) and (max-width: 1199px) {
 		--container_width: 970px;
 	}
-@media (min-width: 1200px){
-	
-}
+	@media (min-width: 1200px) {
+	}
 	@media (min-width: 1200px) {
 		--container_width: 1200px;
 	}
 
-	// @media (min-width: 1440px) {
-	// 	--container_width: 1860px;
-	// }
+	@media (min-width: 1440px) {
+		--container_width: 1860px;
+	}
 }
