--- a/src/styles/components/QuotesBoxSlider.module.scss
+++ b/src/styles/components/QuotesBoxSlider.module.scss
@@ -3,6 +3,7 @@
 	// margin: 10px;
 	// Carousel.module.scss
 	text-align: center;
+	margin: 2%;
 	.slick-slide {
 		padding: 10px;
 		background-color: #f5f5f5;
