--- a/src/styles/components/RowOne.module.scss
+++ b/src/styles/components/RowOne.module.scss
@@ -19,26 +19,32 @@
 }
 .imageDiv {
 	position: relative;
-	width: 40%;
-	height: 500px;
-	justify-content: center;
+	width: 100%;
+	max-width: 1200px; /* Adjust this to the desired width */
+	height: 400px; /* Adjust this based on your content */
 
-	div:nth-child(1) {
+	margin: 0 auto; /* Center the container */
+	.images {
 		position: absolute;
-		left: 0px;
-		bottom: 20px;
+		border-radius: 20px;
+		overflow: hidden;
+	}
+	div:nth-child(1) {
+		top: 50px;
+		left: 10%;
+		width: 30%;
+		z-index: 1;
 	}
 	div:nth-child(2) {
-		position: absolute;
-		z-index: 10;
-		top: 0;
-		right: 0;
-		transform: translate(-60%, 0%);
+		top: 20px;
+		left: 35%;
+		width: 30%;
+		z-index: 2;
 	}
 	div:nth-child(3) {
-		position: absolute;
-		right: 0;
-
-		bottom: 0;
+		top: 50px;
+		right: 10%;
+		width: 30%;
+		z-index: 1;
 	}
 }
