--- a/src/styles/components/RowOne.module.scss
+++ b/src/styles/components/RowOne.module.scss
@@ -19,9 +19,9 @@
 }
 .imageDiv {
 	position: relative;
-	width: 100%;
+	width: 50%;
 	max-width: 1200px; /* Adjust this to the desired width */
-	height: 400px; /* Adjust this based on your content */
+	height: 70vh; /* Adjust this based on your content */
 
 	margin: 0 auto; /* Center the container */
 	.images {
