--- a/src/styles/components/Footer.module.scss
+++ b/src/styles/components/Footer.module.scss
@@ -10,8 +10,8 @@
 		font-size: 16px;
 	}
 	div {
-		@extend %d_flex;
-		justify-content: center;
+		padding: 1%;
+		@extend %f_r_aj_center;
 	}
 	.logoContainer {
 		gap: 15px;
