--- a/src/styles/components/ValueFirstRow.module.scss
+++ b/src/styles/components/ValueFirstRow.module.scss
@@ -8,8 +8,8 @@
 	position: absolute !important;
 	bottom: 0;
 	right: 50%;
-	max-width: 150px;
 
+	width: 20%;
 	transform: translate(50%, 50%);
 }
 .ParentImg {
