--- a/src/styles/components/Header.module.scss
+++ b/src/styles/components/Header.module.scss
@@ -1,19 +1,17 @@
 @import "../helpers/helpers.scss";
 
 .main_header {
-	// @extend %f_r_aj_center;
-	position: sticky;
-
+	@extend %f_r_aj_center;
+	width: 100%; /* Adjust to ensure it covers the full width */
+	max-width: 1440px; /* Optional: set this to prevent overflow */
 	padding-top: 30px;
 	padding-bottom: 10px;
-	width: 100%;
 	z-index: 20;
 	top: 0;
-
 	color: var(--color_white);
-	box-shadow: 0 -6px 10px 5px (#f4be69 0.2);
+	box-shadow: 0 -6px 10px 5px #f4be69 0.2;
 	background-color: var(--color_black);
-
+	margin: 0 auto; /* Center the header */
 	div {
 		&:hover {
 			background-color: (#f4be69 0.1);
@@ -189,5 +187,11 @@
 		.links_wrap {
 			transform: translateX(0) !important;
 		}
+	}
+}
+@media (min-width: 1440px) {
+	.Header_main_header {
+		width: var(--container-width);
+		margin: 0 auto;
 	}
 }
