--- a/src/styles/components/QuotesBoxSlider.module.scss
+++ b/src/styles/components/QuotesBoxSlider.module.scss
@@ -29,8 +29,8 @@
 .slick-slide {
 	overflow: hidden;
 	border-radius: 15px;
-	background-color: #f2f2f2; /* Optional background color */
-	padding: 10px; /* Optional padding */
+	background-color: #f2f2f2; 
+	padding: 10px;
 }
 .Flex {
 	.slick-slider .slick-track,
