--- a/src/styles/components/RowOne.module.scss
+++ b/src/styles/components/RowOne.module.scss
@@ -20,10 +20,10 @@
 .imageDiv {
 	position: relative;
 	width: 50%;
-	max-width: 1200px; /* Adjust this to the desired width */
-	height: 70vh; /* Adjust this based on your content */
+	max-width: 1200px; 
+	height: 50vh; 
 
-	margin: 0 auto; /* Center the container */
+	margin: 0 auto;
 	.images {
 		position: absolute;
 		border-radius: 20px;
