--- a/src/styles/components/Footer.module.scss
+++ b/src/styles/components/Footer.module.scss
@@ -1,7 +1,7 @@
 @import "../helpers/helpers.scss";
 
 .main_footer {
-	border: 1px solid rgba(0, 0, 0, 0.308);
+	border-top: 1px solid rgba(0, 0, 0, 0.308);
 
 	display: grid;
 	grid-template-columns: auto auto auto;
@@ -15,7 +15,7 @@
 	}
 	.logoContainer {
 		gap: 15px;
-		border-right: 1px solid rgba(128, 128, 128, 0.322);
-		border-left: 1px solid rgba(128, 128, 128, 0.295);
+		border-right: 1px solid rgba(0, 0, 0, 0.308);
+		border-left: 1px solid rgba(0, 0, 0, 0.308);
 	}
 }
