--- a/src/styles/components/RowOne.module.scss
+++ b/src/styles/components/RowOne.module.scss
@@ -18,33 +18,45 @@
 	width: 50%;
 }
 .imageDiv {
+	@extend %f_r_aj_center;
 	position: relative;
-	width: 50%;
-	max-width: 1200px; 
-	height: 50vh; 
 
+	width: 50%;
+	max-width: 1200px;
+	height: 50vh;
+	// background-color: aliceblue;
 	margin: 0 auto;
 	.images {
 		position: absolute;
 		border-radius: 20px;
+
 		overflow: hidden;
 	}
+	div {
+		// position: absolute;
+	}
 	div:nth-child(1) {
-		top: 50px;
-		left: 10%;
+		// top: 50px;
+		// left: 50%;
+
 		width: 30%;
 		z-index: 1;
 	}
 	div:nth-child(2) {
-		top: 20px;
-		left: 35%;
+		// top: 20px;
+		// left: 50%;
+
 		width: 30%;
 		z-index: 2;
 	}
 	div:nth-child(3) {
-		top: 50px;
-		right: 10%;
+		// top: 50px;
+		// left: 50%;
+
 		width: 30%;
 		z-index: 1;
 	}
+}
+.active {
+	transition: var(--transition);
 }
