--- a/src/styles/globals/variables.scss
+++ b/src/styles/globals/variables.scss
@@ -39,6 +39,9 @@ $browser-prefixes: false !default;
 	--container_left_space: calc((100% - var(--container_width)) / 2);
 	--transition: ease all 300ms;
 
+	@media (min-width: 425px) {
+		--container_width: 440px;
+	}
 	@media (min-width: 768px) and (max-width: 991px) {
 		--container_width: 750px;
 	}
