--- a/src/styles/components/RowTwoContent.module.scss
+++ b/src/styles/components/RowTwoContent.module.scss
@@ -14,10 +14,13 @@
 		gap: 20px;
 		margin: 0 auto;
 		font-weight: 100;
-		@extend %f_r_a_center;
+		// @extend %f_r_a_center;
 	}
 	.R2wrapper {
-		width: 80%;
+		// width: 80%;
 		margin: 0 auto;
+	}
+	.liveImage {
+		background-color: aliceblue;
 	}
 }
